# chess

./: .dockerignore  .gitignore  .pnp.js  Cargo.toml  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  run.sh  tsconfig.json
.github/workflows/: build.yml  deploy.yml
services/api/: .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
services/api/migrations/: 20201114041034_initial.sql  20201222020924_timestamps.sql  V1__initial.sql
services/api/src/: main.rs  middleware.rs  models.rs  serde.rs  state.rs  util.rs
services/api/src/middleware/: color.rs  game.rs  user.rs
services/api/src/models/: db.rs  game.rs  move.rs  user.rs
services/api/src/models/db/: game.rs
services/api/src/routes/: games.rs
services/api/src/routes/games/: board.rs  moves.rs
services/api/src/serde/: game.rs  uuid.rs
services/boards/: Cargo.toml  Dockerfile
services/boards/src/: assets.rs  main.rs  render.rs
services/bot/: Dockerfile  package.json  tsconfig.json
services/bot/interactions/: challenge.json  game.json  help.json  move.json  ping.json  resign.json
services/gateway/: .gitignore  Dockerfile  gateway.toml
services/nginx/: .gitignore  boards.chess.pleb.xyz.crt  nginx.conf  pleb.xyz.crt
services/prometheus/: prometheus.yml
services/proxy/: Dockerfile  proxy.toml
