[package]
name = "api"
version = "0.1.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
chess = { git = "https://github.com/appellation/chess-1", rev = "2d64c07d35bbaacb60bed1a37bf5bc2ecfab0d55", features = ["serde", "strum"] }
dotenv = "0.15.0"
png = "0.16.7"
rand = "0.7.3"
resvg = "0.11.0"
serde = "1.0.117"
sqlx = { version = "0.3.5", features = ["postgres", "uuid", "tls"] }
strum = { version = "0.19", features = ["derive"] }
tide = "0.14.0"
usvg = "0.11.0"

[features]
sql-validation = []

default = ["sql-validation"]
