[package]
name = "boards"
version = "0.1.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
chess = { git = "https://github.com/appellation/chess-1", branch = "feat/serde", features = ["serde", "strum"] }
png = "0.16.7"
resvg = "0.11.0"
tide = "0.14.0"
urlencoding = "1.1.1"
usvg = "0.11.0"
